# zouyu

./: .gitignore  README.md  package.json  pnpm-lock.yaml
docs/: index.md
luwu/: .pre-commit-config.yaml  MUJOCO_LOG.TXT  PROJECT_COMPLETION_REPORT.md  PROJECT_SUMMARY.md  README.md  demo.py  dev.sh  example.py  pyproject.toml
luwu/.github/workflows/: ci.yml
luwu/assets/robots/: go1.xml
luwu/checkpoints/advanced_ppo/: best_model.pt  checkpoint_100.pt  checkpoint_150.pt  checkpoint_50.pt
luwu/configs/: settings.yaml
luwu/configs/environments/: advanced_parkour.yaml  flat_parkour.yaml  parkour.yaml  rough_parkour.yaml
luwu/configs/robots/: a1.yaml  go1.yaml  unitree_a1.yaml
luwu/configs/training/: advanced_ppo.yaml  basic_ppo.yaml  ppo.yaml
luwu/examples/: train_example.py
luwu/logs/tensorboard/: events.out.tfevents.1753536065.ecrire.49378.0  events.out.tfevents.1753536130.ecrire.49714.0  events.out.tfevents.1753536244.ecrire.50033.0  events.out.tfevents.1753536398.ecrire.50464.0  events.out.tfevents.1753536426.ecrire.50747.0  events.out.tfevents.1753536458.ecrire.51026.0  events.out.tfevents.1753536532.ecrire.51338.0  events.out.tfevents.1753536614.ecrire.51709.0
luwu/scripts/: list_envs.py  random_agent.py  zero_agent.py
luwu/scripts/rl_games/: play.py  train.py
luwu/scripts/rsl_rl/: play.py  train.py
luwu/scripts/sb3/: play.py  train.py
luwu/scripts/skrl/: play.py  train.py
luwu/source/luwu/: pyproject.toml  setup.py
luwu/source/luwu/config/: extension.toml
luwu/source/luwu/docs/: CHANGELOG.rst
luwu/source/luwu/luwu/: ui_extension_example.py
luwu/source/luwu/luwu/assets/robots/: cyberdog2.py
luwu/source/luwu/luwu/tasks/direct/luwu/: __init__.py  luwu_env.py  luwu_env_cfg.py
luwu/source/luwu/luwu/tasks/direct/luwu_marl/: __init__.py  luwu_marl_env.py  luwu_marl_env_cfg.py
luwu/source/luwu/luwu/tasks/locomotion/agents/: rsl_rl_ppo_cfg.py  sb3_sac_cfg.yaml
luwu/source/luwu/luwu/tasks/locomotion/mdp/: __init__.py  curriculums.py  observations.py  rewards.py  terminations.py
luwu/source/luwu/luwu/tasks/locomotion/robots/: __init__.py  velocity_env_cfg.py
luwu/src/luwu/: __init__.py  cli.py
luwu/src/luwu/application/: __init__.py  services.py
luwu/src/luwu/application/algorithms/: __init__.py  ppo.py  storage.py
luwu/src/luwu/application/environments/: __init__.py  base_env.py
luwu/src/luwu/application/training/: __init__.py  trainer.py
luwu/src/luwu/domain/: __init__.py  entities.py  repositories.py  services.py
luwu/src/luwu/domain/entities/: __init__.py  core.py
luwu/src/luwu/domain/services/: __init__.py
luwu/src/luwu/infrastructure/: __init__.py  config.py  isaac_sim.py  ppo.py  repositories.py  tracking.py
luwu/src/luwu/infrastructure/config/: __init__.py  config_manager.py
luwu/src/luwu/infrastructure/simulation/: __init__.py  isaac_backend.py  mujoco_backend.py
luwu/src/luwu/infrastructure/tracking/: __init__.py  tracking_manager.py
luwu/src/luwu/interfaces/: __init__.py  cli.py
luwu/tests/: __init__.py  test_config.py  test_entities.py  test_tracking.py
(+78 files in other folders)
